--- a/public/errors/500.html
+++ b/public/errors/500.html
@@ -1,7 +1,7 @@
 <html lang="de">
     <head>
         <meta charset="UTF-8">
-        <title>E-Mail der Deutschen Einradhockeyliga</title>
+        <title>Interner Fehler</title>
     </head>
     <body>
         <div style="text-align: center;">
@@ -12,7 +12,7 @@
             </p>
 
             <p>
-                <a href="https://einrad.hockey">Zur Startseite</a>
+                <a href="https://einrad.hockey">Erneut versuchen.</a>
             </p>
 
             <p>
