--- a/public/errors/500.html
+++ b/public/errors/500.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div style="text-align: center;">
-            <h1>Es ist ein Fehler auf dem Server aufgetreteten.</h1>
+            <h1>Es ist ein Fehler auf dem Server aufgetreten.</h1>
 
             <p style="color: grey;">
                 <b>Bitte versuche es später erneut.</b>
